Day-3 : Foodify -> Spring Security : compact jwt strings may not contain whitespace -> Not Resolved